--- a/gplserver/package.json
+++ b/gplserver/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dot-prop": "^5.2.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0"
   }
